tests/test_assets/semantic/invalid/mutation/chained_assignment.cog
test::() -> void {
    a: i32 = 0;
    b: i32 = 0;

    a = b = 1;
}