tests/test_assets/semantic/invalid/mutation/chained_assignment.expected
semantic error at line 5: assignment cannot be used as a value; it is a statement
1 semantic error generated.
